fix [MOBILE][LOCATIONFEED][SCROLL]: fixed scroll bar showing on mobile

--- a/src/app/pages/image-view/map/map.component.scss
+++ b/src/app/pages/image-view/map/map.component.scss
@@ -1,4 +1,4 @@
 agm-map {
-  height: 100%;
+  height: calc(100vh - 50px - 62.22px);
 }
 
